--- a/hackathon/templates/index.html
+++ b/hackathon/templates/index.html
@@ -1,8 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Detect your chance at winning">
+    <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
+    <title>HackPredict</title>
+</head>
+<body>
+    <main>
+        <h1><strong>HackPredict</strong></h1>
+        <div id="result">
+          <br />
+          <em>Enter your ideas to see the chance of your team winning!</em>
+        </div>
+        <div class="form-group">
+          <label for="idea">Your idea?</label>
+          <textarea class="form-control" rows="5" id="idea" placeholder="Ideas..." ></textarea>
+        </div>
+    </main>
+
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous"></script>
@@ -14,15 +32,11 @@
                     $.get("/predict/", {
                         "text": text
                     }, function (data) {
-                        $("p").text(data);
+                        $("#result").html("<h3>" + data + "</h3>");
                     });
                 }
             });
         });
     </script>
-</head>
-<body>
-<textarea></textarea>
-<p></p>
 </body>
 </html>
