--- a/hackathon/templates/index.html
+++ b/hackathon/templates/index.html
@@ -5,8 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Detect your chance at winning">
-    <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
     <title>HackPredict</title>
+    <style>
+        body {
+            background-color: #43BFC7;
+            color: white;
+            font-family: "Century Gothic", "Trebuchet MS", Helvetica, sans-serif;
+        }
+
+        h1 {
+            font-family: "Arial Black", Gadget, sans-serif;
+        }
+
+        main {
+            margin: auto;
+            text-align: center;
+        }
+
+        #result {
+            margin-top: 3%;
+            margin-bottom: 5%;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        textarea {
+            border: 1px solid #cccccc;
+            resize: none;
+            width: 50%;
+        }
+    </style>
 </head>
 <body>
     <main>
