--- a/hackathon/templates/projects.html
+++ b/hackathon/templates/projects.html
@@ -20,6 +20,13 @@
         src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
+
+    <style>
+        .top-buffer {
+            margin-top: 20px;
+        }
+    </style>
+
     <!--<style>-->
     <!--body {-->
     <!--background-color: #43BFC7;-->
@@ -58,6 +65,33 @@
 
 <body>
 
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url 'home' %}">Home</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="{% url 'projects' %}">Discovery<span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Link</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="container">
+    <a href="{% url 'projects' %}">sadfd</a>
+</div>
+
 <div class="container">
     <form>
         <label for="tech_tags"></label>
@@ -66,7 +100,7 @@
             <option value="{{ each_technology }}">{{ each_technology }}</option>
             {% endfor %}
         </select>
-        <button type="submit">Submit</button>
+        <button type="submit" class="btn btn-default">Submit</button>
     </form>
 </div>
 
@@ -74,17 +108,18 @@
 
 </div>
 
-<div class="container">
-    <ul>
+<div class="container" id="project_results">
+    <div class="row">
         {% for project in projects %}
-        <li><a href="{{ project.url }}">{{ project.name }}</a></li>
-        <ul>
-            {% for tech in project.technologies.all %}
-            <li>{{ tech.name }}</li>
-            {% endfor %}
-        </ul>
+        <div class="col-md-4 col-sm-6 col-xs-12 top-buffer">
+            <a href="{{ project.url }}">
+                <img src="{{ project.thumbnail }}" class="img-thumbnail" alt="{{ project.name }}" width="304"
+                     height="236">
+            </a>
+            <a href="{{ project.url }}">{{ project.name }}</a>
+        </div>
         {% endfor %}
-    </ul>
+    </div>
 </div>
 
 <script>
