--- a/hackathon/templates/index.html
+++ b/hackathon/templates/index.html
@@ -7,100 +7,8 @@
     <meta name="description" content="Detect your chance at winning">
     <title>HackPredict</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        body {
-            background-color: #43BFC7;
-            color: white;
-            font-family: "Century Gothic", "Trebuchet MS", Helvetica, sans-serif;
-        }
-
-        h1 {
-            font-family: "Arial Black", Gadget, sans-serif;
-        }
-
-        main {
-            margin: auto;
-            text-align: center;
-        }
-
-        #result {
-            background-color: #35989f;
-            margin: 3% auto 5% auto;
-            padding: 1%;
-            text-align: center;
-            width: 45%;
-        }
-
-        #result ul {
-            list-style-type: none;
-            text-align: center;
-        }
-
-        #result li {
-            display: inline;
-            margin: 0 5px ;
-        }
-
-        #result li .fa {
-            color: #b3e8d1;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        textarea {
-            border: 1px solid #cccccc;
-            color: #348193;
-            resize: none;
-            width: 50%;
-        }
-    </style>
 </head>
 <body>
-    <main>
-        <h1><strong>HackPredict</strong></h1>
-        <div id="result">
-          <em>Enter your ideas to see the chance of your team winning!</em>
-          <br />
-        </div>
-        <div class="form-group">
-          <label for="idea">Your idea?</label>
-          <textarea class="form-control" rows="5" id="idea" placeholder="Ideas..." ></textarea>
-        </div>
-    </main>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous"></script>
-    <script>
-        $(function () {
-            $("textarea").on("input propertychange", function () {
-                var text = $("textarea").val();
-                if (text.length > 0) {
-                    $.get("/predict/", {
-                        "text": text
-                    }, function (data) {
-                        const dot = Math.round(data * 10);
-
-                        // looping to create a list of dots
-                        let progress = "<ul id='progress'>";
-                        for (var i = 0; i < dot; i++) {
-                            progress += "<li><i class='fa fa-circle' aria-hidden='true'></i></li>";
-                        }
-                        for (var i = 0; i < 10-dot; i++) {
-                            progress += "<li><i class='fa fa-circle-thin' aria-hidden='true'></i></li>";
-                        }
-                        progress += "</ul>";
-
-                        $("#result").html(
-                            "<div id='score'>" + Math.round(data * 100) + "%</div>" + progress
-                        );
-                    });
-                }
-            });
-        });
-    </script>
+    <p>{{ pitch }}</p>
 </body>
 </html>
