--- a/hackathon/templates/index.html
+++ b/hackathon/templates/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Detect your chance at winning">
-    <title>HackPredict</title>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>HackGenerator</title>
     <style>
         body {
             background-color: #43BFC7;
             color: white;
-            font-family: "Century Gothic", "Trebuchet MS", Helvetica, sans-serif;
+            font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif
         }
 
         h1 {
@@ -23,38 +21,28 @@
             text-align: center;
         }
 
-        #info {
-            background-color: #35989f;
+        #pitch {
+            background-color: #c6ebee;
+            color: #35989f;
             margin: 3% auto 5% auto;
-            padding: 1%;
+            padding: 1% 3%;
             text-align: center;
-            width: 45%;
-        }
-
-        #info ul {
-            list-style-type: none;
-            text-align: center;
-        }
-
-        #info li {
-            display: inline;
-            margin: 0 5px ;
-        }
-
-        #info li .fa {
-            color: #b3e8d1;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        textarea {
-            border: 1px solid #cccccc;
-            color: #348193;
-            resize: none;
             width: 50%;
+        }
+
+        button {
+            background-color: white;
+            border: 2px solid #35989f;
+            border-radius: 3px;
+            color: #35989f;
+            font-size: .75em;
+            padding: .5em;
+            text-shadow: .4px .4px #43BFC7;
+        }
+
+        button:hover, button:focus {
+            background-color: #35989f;
+            color: white;
         }
 
     </style>
@@ -63,12 +51,20 @@
 <main>
     <h1><strong>HackGenerator</strong></h1>
     <div id="info">
-        <br/>
-        <em>Random pitches generated based off of previous hackathon winners.</em>
+        <p>Random pitches generated based off of previous hackathon winners.</p>
     </div>
-    <div class="form-group">
-        <p>{{ pitch }}</p>
+    <div id="pitch">
+        <h3>{{ pitch }}</h3>
+        <button class="more"><strong>More Ideas!</strong></button>
     </div>
 </main>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script>
+    $(document).ready( function() {
+        $('button').on("click", function() {
+            $("#pitch h3").load(window.location.href + "#pitch h3");
+        })
+    })
+</script>
 </body>
 </html>
