--- a/hackathon/templates/index.html
+++ b/hackathon/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Detect your chance at winning">
     <title>HackGenerator</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         body {
             background-color: #43BFC7;
@@ -45,6 +46,25 @@
             color: white;
         }
 
+        footer {
+            color: white;
+            margin: auto;
+            text-align: center;
+        }
+
+        footer a:link, footer a:visited {
+            color: white;
+        }
+
+        footer a:hover, footer a:active {
+            color: #35989f;
+        }
+
+        footer p {
+            font-size: .75em;
+            margin: .5%;
+        }
+
     </style>
 </head>
 <body>
@@ -58,6 +78,13 @@
         <button class="more"><strong>More Ideas!</strong></button>
     </div>
 </main>
+<footer>
+    <a href="https://github.com/tingwai-to/hackathon-winner"><i class="fa fa-2x fa-github-square" aria-hidden="true"></i></a>
+    <p>HackGen is a 2017 AngelHack entry by
+        <a href="https://github.com/tingwai-to">Ting-Wai To</a>,
+        <a href="https://github.com/MichaelSnowden">Michael Snowden</a>, and
+        <a href="https://github.com/amychan331">Amy Chan</a>.</p>
+</footer>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script>
     $(document).ready( function() {
